--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "ng test --source-map=false",
     "test:dev": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng test --source-map=false",
     "lint": "ng lint",
-    "postinstall": "node patch.js && ngcc",
+    "postinstall": "ngcc",
     "serve:ssr": "node dist/server/main",
     "build:ssr": "ng run minds:server:production",
     "build:ssr:dev": "ng run minds:server:production",
