--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "plotly.js": "^1.54.1",
     "plyr": "^3.6.4",
     "qrcodejs2": "0.0.2",
+    "remarkable": "^2.0.1",
     "rxjs": "~6.6.0",
     "socket.io-client": "^2.2.0",
     "textarea-caret": "^3.1.0",
