--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/yargs": "^17.0.2",
     "@walletconnect/web3-provider": "^1.4.1",
     "angular-plotly.js": "^4.0.4",
+    "angularx-qrcode": "^11.0.0",
     "assert": "^2.0.0",
     "bn.js": "^5.2.0",
     "braintree-web": "3.79.1",
@@ -81,7 +82,6 @@
     "os-browserify": "^0.3.0",
     "plotly.js": "^2.2.1",
     "plyr": "npm:@mindsorg/plyr@^3.8.0",
-    "qrcodejs2": "0.0.2",
     "rxjs": "^6.6.0",
     "socket.io-client": "^4.1.3",
     "stream-browserify": "^3.0.0",
