--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "serve:embed:dev": "ng serve minds-embed --watch=true --poll=1000 --proxy-config proxy.conf.js --host=0.0.0.0 --port=4300 --disableHostCheck=true",
     "bundle-report": "webpack-bundle-analyzer dist/browser/stats.json",
     "xi18n": "gulp extract.i18n",
-    "xi18n-import": "gulp import.i18n"
+    "xi18n-import": "gulp import.i18n",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -110,7 +111,7 @@
     "gulp-sass": "^5.0.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-template": "^5.0.0",
-    "husky": "^7.0.1",
+    "husky": "^7.0.0",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~7.0.0",
     "jasmine-ts-async": "^1.0.0",
