fix: remove legacy code

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -5,11 +5,7 @@
     "baseUrl": "./",
     "module": "es2020",
     "types": ["node"],
-    "sourceMap": false,
-    "allowSyntheticDefaultImports": true,
-    "paths": {
-      "ajv": ["./typings/ajv.d.ts"]
-    }
+    "sourceMap": false
   },
   "files": [
     "main.ts",
