--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "serve:embed:dev": "ng serve minds-embed --watch=true --poll=1000 --proxy-config proxy.conf.js --host=0.0.0.0 --port=4300 --disableHostCheck=true",
     "bundle-report": "webpack-bundle-analyzer dist/browser/stats.json",
     "xi18n": "gulp extract.i18n",
-    "xi18n-import": "gulp import.i18n",
-    "prepare": "husky install"
+    "xi18n-import": "gulp import.i18n"
   },
   "private": true,
   "dependencies": {
@@ -33,7 +32,7 @@
     "@angular/compiler": "~12.1.2",
     "@angular/core": "~12.1.2",
     "@angular/forms": "~12.1.2",
-    "@angular/localize": "^12.1.2",
+    "@angular/localize": "~12.1.2",
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/platform-server": "~12.1.2",
@@ -47,7 +46,6 @@
     "@nguniversal/common": "~12.1.0",
     "@nguniversal/express-engine": "~12.1.0",
     "@nguniversal/socket-engine": "~12.1.0",
-    "@popperjs/core": "^2.9.3",
     "@sentry/browser": "^6.9.0",
     "@sentry/node": "^6.9.0",
     "@sentry/tracing": "^6.9.0",
@@ -57,14 +55,13 @@
     "@types/yargs": "^17.0.2",
     "@walletconnect/web3-provider": "^1.4.1",
     "angular-plotly.js": "^4.0.4",
-    "angularx-qrcode": "^11.0.0",
     "assert": "^2.0.0",
     "bn.js": "^5.2.0",
     "braintree-web": "3.79.1",
     "cookie-parser": "^1.4.5",
     "core-js": "~3.15.2",
     "crypto-browserify": "^3.12.0",
-    "ethers": "^5.4.4",
+    "ethers": "^5.4.1",
     "express-http-proxy": "^1.6.2",
     "fortmatic": "^2.2.1",
     "global": "^4.4.0",
@@ -80,11 +77,11 @@
     "ngx-drag-drop": "^2.0.0",
     "ngx-image-cropper": "^4.0.1",
     "ngx-plyr": "^4.0.0",
-    "ngx-popperjs": "^12.1.2",
     "node-cache": "^5.1.2",
     "os-browserify": "^0.3.0",
     "plotly.js": "^2.2.1",
     "plyr": "npm:@mindsorg/plyr@^3.8.0",
+    "qrcodejs2": "0.0.2",
     "rxjs": "^6.6.0",
     "socket.io-client": "^4.1.3",
     "stream-browserify": "^3.0.0",
@@ -113,7 +110,7 @@
     "gulp-sass": "^5.0.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-template": "^5.0.0",
-    "husky": "^7.0.0",
+    "husky": "^7.0.1",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~7.0.0",
     "jasmine-ts-async": "^1.0.0",
@@ -124,7 +121,7 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "karma-mocha-reporter": "^2.2.5",
     "nodemon": "^2.0.12",
-    "prettier": "^1.19.1",
+    "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "protractor": "~7.0.0",
     "sass": "^1.35.2",
@@ -135,11 +132,10 @@
     "webpack-cli": "^4.7.2",
     "xmlbuilder2": "^2.1.2"
   },
-  "browserslist": [
-    "> 0.5%",
-    "last 2 versions",
-    "Firefox ESR",
-    "not dead",
-    "not IE 11"
-  ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "sh .githooks/pre-commit && pretty-quick --staged --bail --pattern \"**/*.*(ts|html|scss)\"",
+      "post-commit": "sh .githooks/post-commit"
+    }
+  }
 }
