--- a/angular.json
+++ b/angular.json
@@ -134,7 +134,8 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
-              ]
+              ],
+              "serviceWorker": true
             },
             "hmr": {
               "fileReplacements": [
