--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/platform-server": "~12.1.2",
+    "@angular/pwa": "^12.1.2",
     "@angular/router": "~12.1.2",
+    "@angular/service-worker": "~12.1.2",
     "@bhayward93/ckeditor5-build-minds": "^1.1.8",
     "@ckeditor/ckeditor5-angular": "^2.0.2",
     "@danielmoncada/angular-datetime-picker": "^12.0.0",
