--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@danielmoncada/angular-datetime-picker": "^12.0.0",
     "@gorniv/ngx-universal": "^2.2.2",
     "@growthbook/growthbook": "^0.13.0",
+    "@maticnetwork/maticjs": "^2.0.50",
     "@mindsorg/web3modal-angular": "^1.5.0",
     "@nguniversal/builders": "~12.1.0",
     "@nguniversal/common": "~12.1.0",
