--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: minds/ci-front:14
+ image: minds/ci-front:14
 
 stages:
   - test and build
@@ -104,17 +104,17 @@ qa:sandbox:
 #     - /^master$/
 #   <<: *cypress_tests
 
-# qa:manual:
-#   stage: qa
-#   script:
-#     - echo "Manually approved"
-#   when: manual
-#   only:
-#     refs:
-#       - master
-#       - production
-#       - test/gitlab-ci
-#   allow_failure: false
+qa:manual:
+  stage: qa
+  script:
+    - echo "Manually approved"
+  when: manual
+  only:
+    refs:
+      - master
+      - production
+      - test/gitlab-ci
+  allow_failure: false
 
 ###############
 # Build Stage #
