--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@gorniv/ngx-universal": "^2.2.2",
     "@growthbook/growthbook": "^0.13.0",
     "@mindsorg/web3modal-angular": "^1.5.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@nguniversal/builders": "~12.1.0",
     "@nguniversal/common": "~12.1.0",
     "@nguniversal/express-engine": "~12.1.0",
@@ -61,6 +62,7 @@
     "angularx-qrcode": "^11.0.0",
     "assert": "^2.0.0",
     "bn.js": "^5.2.0",
+    "bootstrap": "^5.1.3",
     "braintree-web": "3.79.1",
     "cookie-parser": "^1.4.5",
     "core-js": "~3.15.2",
