--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@sentry/browser": "^6.9.0",
     "@sentry/node": "^6.9.0",
     "@sentry/tracing": "^6.9.0",
+    "@snowplow/browser-tracker": "^3.1.6",
     "@transak/transak-sdk": "^1.0.28",
     "@types/express": "^4.17.13",
     "@types/hls.js": "^0.13.3",
