--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "https-browserify": "^1.0.0",
     "macy": "^2.5.1",
     "marked": "^2.1.3",
-    "material-design-icons": "~3.0.1",
     "material-design-lite": "~1.3.0",
+    "material-icons": "^1.10.4",
     "medium-editor": "^5.23.3",
     "moment": "^2.29.1",
     "ngx-drag-drop": "^2.0.0",
