--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "private": true,
   "dependencies": {
+    "@0xsequence/multicall": "^0.35.5",
     "@angular/animations": "~12.1.2",
     "@angular/cdk": "^12.1.3",
     "@angular/common": "~12.1.2",
@@ -67,13 +68,14 @@
     "cookie-parser": "^1.4.5",
     "core-js": "~3.15.2",
     "crypto-browserify": "^3.12.0",
-    "ethers": "^5.4.4",
+    "ethers": "^5.5.3",
     "express-http-proxy": "^1.6.2",
     "fortmatic": "^2.2.1",
     "global": "^4.4.0",
     "highlight.js": "^11.1.0",
     "hls.js": "^1.0.7",
     "https-browserify": "^1.0.0",
+    "lodash.memoize": "^4.1.2",
     "macy": "^2.5.1",
     "marked": "^2.1.3",
     "material-design-icons": "~3.0.1",
