--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prebuild:dev": "gulp build.sass",
     "build:dev": "ng build --watch=true --poll=1000",
     "preserve:dev": "gulp build.sass",
-    "serve:dev": "ng serve --configuration hmr --hmr --proxy-config proxy.conf.js --host=0.0.0.0 --disableHostCheck=true --deployUrl=http://localhost:4200/",
+    "serve:dev": "ng serve --source-map=true --configuration hmr --hmr --proxy-config proxy.conf.js --host=0.0.0.0 --disableHostCheck=true --deployUrl=http://localhost:4200/",
+    "serve:dev:perf": "node --max-old-space-size=6144 ./node_modules/@angular/cli/bin/ng serve --source-map=true --configuration dev --hmr --proxy-config proxy.conf.js --host=0.0.0.0 --disableHostCheck=true --deployUrl=http://localhost:4200/",
     "test": "ng test --source-map=false",
     "test:dev": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng test --source-map=false",
     "lint": "ng lint",
@@ -108,6 +109,7 @@
     "@types/jasmine": "~3.8.1",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "~16.4.0",
+    "codelyzer": "^6.0.2",
     "cross-env": "^7.0.3",
     "gulp": "~4.0.2",
     "gulp-autoprefixer": "^8.0.0",
