update cache key

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ variables:
 cache:
   key:
     files:
-      - package.json
+      - package-lock.json
     prefix: ${CI_JOB_NAME}
   paths:
     - node_modules/
