--- a/angular.json
+++ b/angular.json
@@ -156,6 +156,11 @@
             "production": {
               "browserTarget": "minds:build:production"
             },
+            "dev": {
+              "browserTarget": "minds:build:dev",
+              "servePath": "/",
+              "sourceMap": true
+            },
             "hmr": {
               "hmr": true,
               "browserTarget": "minds:build:hmr"
@@ -198,13 +203,6 @@
               "includePaths": ["src/stylesheets"]
             },
             "preserveSymlinks": true
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
-            "exclude": ["**/node_modules/**"]
           }
         },
         "server": {
@@ -333,13 +331,6 @@
           "options": {
             "protractorConfig": "./protractor.conf.js",
             "devServerTarget": "minds:serve"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": ["e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**"]
           }
         }
       }
