--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prebuild:dev": "gulp build.sass",
     "build:dev": "ng build --watch=true --poll=1000",
     "preserve:dev": "gulp build.sass",
-    "serve:dev": "ng serve --configuration hmr --hmr --proxy-config proxy.conf.js --host=0.0.0.0 --disableHostCheck=true --deployUrl=http://localhost:4200/",
+    "serve:dev": "ng serve --configuration hmr --hmr --proxy-config proxy.conf.js --host=0.0.0.0 --disableHostCheck=true",
     "test": "ng test --source-map=false",
     "test:dev": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng test --source-map=false",
     "lint": "ng lint",
@@ -27,17 +27,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.2",
+    "@angular/animations": "~13.2.1",
     "@angular/cdk": "^12.1.3",
-    "@angular/common": "~12.1.2",
-    "@angular/compiler": "~12.1.2",
-    "@angular/core": "~12.1.2",
-    "@angular/forms": "~12.1.2",
-    "@angular/localize": "~12.1.2",
-    "@angular/platform-browser": "~12.1.2",
-    "@angular/platform-browser-dynamic": "~12.1.2",
-    "@angular/platform-server": "~12.1.2",
-    "@angular/router": "~12.1.2",
+    "@angular/common": "~13.2.1",
+    "@angular/compiler": "~13.2.1",
+    "@angular/core": "~13.2.1",
+    "@angular/forms": "~13.2.1",
+    "@angular/localize": "~13.2.1",
+    "@angular/platform-browser": "~13.2.1",
+    "@angular/platform-browser-dynamic": "~13.2.1",
+    "@angular/platform-server": "~13.2.1",
+    "@angular/router": "~13.2.1",
     "@bhayward93/ckeditor5-build-minds": "^1.1.8",
     "@ckeditor/ckeditor5-angular": "^2.0.2",
     "@danielmoncada/angular-datetime-picker": "^12.0.0",
@@ -95,16 +95,17 @@
     "stream-http": "^3.2.0",
     "textarea-caret": "^3.1.0",
     "tslib": "^2.3.0",
+    "url": "^0.11.0",
     "walletlink": "^2.0.2",
     "webtorrent": "^0.103.0",
     "yargs": "^17.0.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.1.4",
-    "@angular/cli": "^12.1.4",
-    "@angular/compiler-cli": "~12.1.2",
-    "@angular/language-service": "~12.1.2",
+    "@angular-devkit/build-angular": "13.2.2",
+    "@angular/cli": "^13.2.2",
+    "@angular/compiler-cli": "~13.2.1",
+    "@angular/language-service": "~13.2.1",
     "@angularclass/hmr": "^3.0.0",
     "@types/express-serve-static-core": "^4.17.24",
     "@types/jasmine": "~3.8.1",
@@ -133,7 +134,7 @@
     "sass": "^1.35.2",
     "ts-node": "~10.1.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5",
+    "typescript": "~4.5.5",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^4.7.2",
     "xmlbuilder2": "^2.1.2"
