--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.1",
-    "@angular/cdk": "^12.1.3",
+    "@angular/cdk": "^13.2.1",
     "@angular/common": "~13.2.1",
     "@angular/compiler": "~13.2.1",
     "@angular/core": "~13.2.1",
@@ -40,15 +40,15 @@
     "@angular/router": "~13.2.1",
     "@bhayward93/ckeditor5-build-minds": "^1.1.8",
     "@ckeditor/ckeditor5-angular": "^2.0.2",
-    "@danielmoncada/angular-datetime-picker": "^12.0.0",
+    "@danielmoncada/angular-datetime-picker": "^13.1.1",
     "@growthbook/growthbook": "^0.16.1",
     "@mindsorg/ngx-universal": "^2.3.0",
     "@mindsorg/web3modal-angular": "^1.6.1",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@nguniversal/builders": "~12.1.0",
-    "@nguniversal/common": "~12.1.0",
-    "@nguniversal/express-engine": "~12.1.0",
-    "@nguniversal/socket-engine": "~12.1.0",
+    "@nguniversal/builders": "^13.0.2",
+    "@nguniversal/common": "^13.0.2",
+    "@nguniversal/express-engine": "^13.0.2",
+    "@nguniversal/socket-engine": "^13.0.2",
     "@popperjs/core": "^2.9.3",
     "@sentry/browser": "^6.9.0",
     "@sentry/node": "^6.9.0",
