--- a/angular.json
+++ b/angular.json
@@ -142,7 +142,8 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.hmr.ts"
                 }
-              ]
+              ],
+              "deployUrl": "http://localhost:4200/"
             }
           },
           "defaultConfiguration": ""
