--- a/package.json
+++ b/package.json
@@ -118,13 +118,13 @@
     "gulp-sass-glob": "^1.1.0",
     "gulp-template": "^5.0.0",
     "husky": "^7.0.0",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~7.0.0",
+    "jasmine-core": "^4.0.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "jasmine-ts-async": "^1.0.0",
-    "karma": "~6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.1",
+    "karma": "^6.3.15",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "karma-mocha-reporter": "^2.2.5",
     "nodemon": "^2.0.12",
