--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "os-browserify": "^0.3.0",
     "plotly.js": "^2.2.1",
     "plyr": "npm:@mindsorg/plyr@^3.8.0",
+    "raw-loader": "^4.0.2",
     "rxjs": "^6.6.0",
     "socket.io-client": "^4.1.3",
     "stream-browserify": "^3.0.0",
