--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@angular/platform-browser": "~13.2.1",
     "@angular/platform-browser-dynamic": "~13.2.1",
     "@angular/platform-server": "~13.2.1",
+    "@angular/pwa": "^13.2.3",
     "@angular/router": "~13.2.1",
+    "@angular/service-worker": "^13.2.2",
     "@bhayward93/ckeditor5-build-minds": "^1.1.8",
     "@ckeditor/ckeditor5-angular": "^2.0.2",
-    "@danielmoncada/angular-datetime-picker": "^13.1.1",
     "@ctrl/ngx-emoji-mart": "^6.2.0",
+    "@danielmoncada/angular-datetime-picker": "^13.1.1",
     "@growthbook/growthbook": "^0.16.1",
     "@mindsorg/ngx-universal": "^2.3.0",
     "@mindsorg/web3modal-angular": "^1.6.1",
