Update web3 modal package

--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "@angular/router": "~13.2.1",
     "@bhayward93/ckeditor5-build-minds": "^1.1.8",
     "@ckeditor/ckeditor5-angular": "^2.0.2",
-    "@danielmoncada/angular-datetime-picker": "^13.1.1",
     "@ctrl/ngx-emoji-mart": "^6.2.0",
+    "@danielmoncada/angular-datetime-picker": "^13.1.1",
     "@growthbook/growthbook": "^0.16.1",
     "@mindsorg/ngx-universal": "^2.3.0",
-    "@mindsorg/web3modal-angular": "^1.6.1",
+    "@mindsorg/web3modal-angular": "^1.7.1-beta.2",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@nguniversal/builders": "^13.0.2",
     "@nguniversal/common": "^13.0.2",
