--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "ngx-plyr": "^4.0.0",
     "ngx-popperjs": "^12.1.2",
     "node-cache": "^5.1.2",
+    "onesignal-ngx": "^1.0.0-beta6",
     "os-browserify": "^0.3.0",
     "plotly.js": "^2.2.1",
     "plyr": "npm:@mindsorg/plyr@^3.8.0",
