Feat/a13 upgrade minds#2937
Squashed commit of the following:

commit 55ea26931ada5d0e727b9965d104dca282c781c3
Author: Ben Hayward <ben@minds.com>
Date:   Tue Feb 22 11:50:09 2022 +0000

    Package update

commit de40418ec41f5047d6cc6677ac1919462cd1f9e4
Author: Ben Hayward <ben@minds.com>
Date:   Mon Feb 21 13:46:55 2022 +0000

    Update web3 modal package

commit 70e02934d48062d475cb839633f040aa17dfafd5
Merge: a353076ae 19f1a753d
Author: Ben Hayward <ben@minds.com>
Date:   Fri Feb 18 15:49:17 2022 +0000

    Merge branch 'master' of gitlab.com:minds/front into feat/a13-upgrade-ben

commit a353076aee53a378da2817ac0f4fbfbebbae455b
Merge: e38671f95 ccbb250bb
Author: Ben Hayward <ben@minds.com>
Date:   Mon Feb 14 17:32:32 2022 +0000

    Merge branch 'master' of gitlab.com:minds/front into feat/a13-upgrade-ben

commit e38671f95e0e9d15f7e3793981e27c5ed56bac32
Author: Ben Hayward <ben@minds.com>
Date:   Mon Feb 14 15:31:12 2022 +0000

    Make serve message more verbose

commit a67d7b889a6bf93aef3c778a61014fc5ea3a56e5
Author: Ben Hayward <ben@minds.com>
Date:   Mon Feb 14 14:36:53 2022 +0000

    remove testing comments

commit 6c6f8f97b08441b77275644c6e4cebaeefe2c38d
Author: Ben Hayward <ben@minds.com>
Date:   Mon Feb 14 14:27:54 2022 +0000

    Remove test todo

commit 4bc2bdba94f47a8a41e78753f3b39f6051d2823c
Author: Ben Hayward <ben@minds.com>
Date:   Fri Feb 11 14:38:19 2022 +0000

    Update to ignore cache files

commit 4994039f21588c5f14b66245c8a6b098c1c09351
Author: Ben Hayward <ben@minds.com>
Date:   Fri Feb 11 14:16:30 2022 +0000

    Fix test randomly crashing out

commit 192d1cfecc9d915d76a8500171691dcc298bbbbb
Author: Ben Hayward <ben@minds.com>
Date:   Fri Feb 11 13:31:39 2022 +0000

    Missing build

commit 0d0419b65cc63e784b1ca9d9aa5497cb802e413c
Author: Ben Hayward <ben@minds.com>
Date:   Fri Feb 11 13:25:21 2022 +0000

    Update package lock for conflict

commit 45b3bcdc9f6021586f8eb93367424959b4ce45d6
Merge: 16808c53c 546681c8d
Author: Ben Hayward 

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/.angular/cache
+cache
+cache_directory
 # Ignore front end plugins
 #app/src/plugins
 #app/templates/plugins
@@ -44,3 +47,4 @@ cypress/videos
 !.gitkeep
 !/.nvmrc
 !/.husky
+cypress-tests
