--- a/angular.json
+++ b/angular.json
@@ -167,6 +167,10 @@
             "hmr": {
               "hmr": true,
               "browserTarget": "minds:build:hmr"
+            },
+            "dev": {
+              "hmr": true,
+              "browserTarget": "minds:build:dev"
             }
           }
         },
