--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -18,12 +18,10 @@
     {
       "name": "assets",
       "installMode": "lazy",
-      "updateMode": "prefetch",
+      "updateMode": "lazy",
       "resources": {
-        "files": [
-          "/assets/**",
-          "/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
-        ]
+        "files": ["/assets/**"],
+        "urls": ["https://cdn*"]
       }
     }
   ]
