subgraphs initialization - txHistory

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/platform-server": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "@apollo/client": "^3.5.10",
     "@bhayward93/ckeditor5-build-minds": "^1.1.8",
     "@ckeditor/ckeditor5-angular": "^2.0.2",
     "@ctrl/ngx-emoji-mart": "^6.2.0",
@@ -66,6 +67,7 @@
     "@walletconnect/web3-provider": "^1.4.1",
     "angular-plotly.js": "^4.0.4",
     "angularx-qrcode": "^11.0.0",
+    "apollo-angular": "^3.0.0",
     "assert": "^2.0.0",
     "blurhash": "^1.1.4",
     "bn.js": "^5.2.0",
@@ -78,6 +80,7 @@
     "express-http-proxy": "^1.6.2",
     "fortmatic": "^2.2.1",
     "global": "^4.4.0",
+    "graphql": "^16.3.0",
     "highlight.js": "^11.1.0",
     "hls.js": "^1.0.7",
     "https-browserify": "^1.0.0",
