(infra): support for storybook - #5444

--- a/angular.json
+++ b/angular.json
@@ -238,6 +238,19 @@
             }
           },
           "defaultConfiguration": ""
+        },
+        "storybook": {
+          "builder": "@storybook/angular:start-storybook",
+          "options": {
+            "browserTarget": "minds:build",
+            "port": 6006
+          }
+        },
+        "build-storybook": {
+          "builder": "@storybook/angular:build-storybook",
+          "options": {
+            "browserTarget": "minds:build"
+          }
         }
       }
     },
