--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "bundle-report": "webpack-bundle-analyzer dist/browser/stats.json",
     "xi18n": "gulp extract.i18n",
     "xi18n-import": "gulp import.i18n",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "docs:json": "compodoc -p ./tsconfig.doc.json -e json -d .",
+    "storybook": "npm run docs:json && ng run minds:storybook",
+    "build-storybook": "npm run docs:json && ng run minds:build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -111,10 +114,21 @@
     "@angular/compiler-cli": "~13.2.1",
     "@angular/language-service": "~13.2.1",
     "@angularclass/hmr": "^3.0.0",
+    "@babel/core": "^7.17.8",
+    "@compodoc/compodoc": "^1.1.19",
+    "@storybook/addon-actions": "^6.4.20",
+    "@storybook/addon-essentials": "^6.4.20",
+    "@storybook/addon-interactions": "^6.4.20",
+    "@storybook/addon-links": "^6.4.20",
+    "@storybook/angular": "^6.4.20",
+    "@storybook/builder-webpack5": "^6.4.20",
+    "@storybook/manager-webpack5": "^6.4.20",
+    "@storybook/testing-library": "^0.0.9",
     "@types/express-serve-static-core": "^4.17.24",
     "@types/jasmine": "~3.8.1",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "~16.4.0",
+    "babel-loader": "^8.2.4",
     "cross-env": "^7.0.3",
     "gulp": "~4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -136,6 +150,7 @@
     "pretty-quick": "^3.1.1",
     "protractor": "~7.0.0",
     "sass": "^1.35.2",
+    "storybook-addon-themes": "^6.1.0",
     "ts-node": "~10.1.0",
     "tslint": "~6.1.0",
     "typescript": "~4.5.5",
