--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -20,8 +20,7 @@
       "installMode": "lazy",
       "updateMode": "lazy",
       "resources": {
-        "files": ["/assets/**"],
-        "urls": ["https://cdn**"]
+        "files": ["/assets/**"]
       }
     }
   ],
